# FinalProjectSubmission

./: CMakeLists.txt  README.md  custom_swe.py  viz_tools.py
src/: sweFinalProject.cu
